# Pico-2W-2350-Embedded-Software-Project

./: CMakeLists.txt  README.md  new_proj.uf2  smart_blink.c  smart_blink.uf2
